# stocks

./: .env-example  .gitignore  README.md
backend/: Makefile
backend/app/: database.py  main.py  models.py  pyproject.toml  schemas.py  utils.py
backend/app/routes/: auth.py
backend/py-scripts/: main.py  pyproject.toml
backend/scripts/: csv_to_db.py  fund_prices.csv  log.txt  populate_stocks.py  pyproject.toml  stealth_selenium.py  test.csv  update_daily_prices.py
backend/sql/: queries.sql  reset.sql  schema.sql  seed.sql
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: AppNavbar.vue  Chart.vue  Footer.vue  Header.vue  Summary.vue
frontend/src/components/forms/: Login.vue  OTPVerify.vue  Registration.vue
frontend/src/composables/: useViewport.ts
frontend/src/functions/: db.ts
frontend/src/layouts/: DefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: mainStore.ts
frontend/src/views/: SettingsView.vue
others/ge_scraper/: log.txt  pyproject.toml  sele.py
