[project]
name = "app"
version = "0.1.0"
description = "FastAPI backend with UV package management"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
